src/test/deca/codegen/invalid/absenceReturn4.deca
class A {
    float function() {
        int i=0;
        while (i < 10) {
            i=i+1;
            if (i>10) {
                return 1.0;
            }
        }
    }
}

{
    A a = new A();
    float x = a.function();
}

//ERROR message_erreur